apps/pomodoro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pomodoro
  namespace: pomodoro
spec:
  type: ClusterIP
  selector:
    app: pomodoro
  ports:
    - name: http
      port: 80
      targetPort: http
